# smallestMusicPlayer

./: .clangd  .gitignore  CMakeLists.txt  README.md  audio_player  browser.cpp  test1.cpp  test2  test2.cpp  test3  模块需求.md
SingleheaderLibrary/: .clangd  CMakeLists.txt  LibImpl.cpp
SingleheaderLibrary/mpris_server/: mpris_server.hpp
inc/: AudioFilterChain.hpp  AudioParams.hpp  AudioPlayer.hpp  ColorExtractor.hpp  Cover.hpp  CoverCache.hpp  CoverImage.hpp  CoverImageProvider.hpp  DatabaseService.hpp  FileScanner.hpp  MediaController.hpp  MetaData.hpp  MetaDataSharer.hpp  PCH.h  Playlist.hpp  PlaylistNode.hpp  Precompiled.h  SimpleThreadPool.hpp  SysMediaService.hpp  mainwindow.h  mpris_server.hpp  musiclistmodel.h  uicontroller.h
qml/: Background.qml  BubblePopup.qml  DeleteDialog.qml  InfoDialog.qml  ListView.qml  Main.qml  MarqueeText.qml  MusicListHeader.qml  MusicListItemDelegate.qml  MusicListView.qml  OutputSettingsWindow.qml  StartupPage.qml  StyleButton.qml  WaveformProgressBar.qml
qrc/: img.qrc
src/: AudioFilterChain.cpp  AudioPlayer.cpp  ColorExtractor.cpp  CoverCache.cpp  CoverImageProvider.cpp  DatabaseService.cpp  FileScanner.cpp  MediaController.cpp  MetaDataSharer.cpp  Playlist.cpp  StbImpl.cpp  SysMediaService.cpp  UIController.cpp  main.cpp  mainwindow.cpp  musiclistmodel.cpp
tmp/: test1.cpp  test2.cpp  test3.cpp
ui/: mainwindow.ui
